<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffae09"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="242dp"
        android:layout_height="337dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/usuario"
        android:src="@drawable/Norwegian" />

    <EditText
        android:id="@+id/EditT_Nombre_Usuario"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresar_usuario"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:paddingTop="10dp"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/EditT_Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresar_contrase_a"
        android:inputType="textPassword"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnIni"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background"
        android:text="@string/iniciar"
        android:textColor="#ffae09"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#ff8800"
        android:text="@string/registrarse"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />


</LinearLayout>