<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/icono_usuario"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/elija_el_tipo_de_usuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCom"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="#666"
        android:text="@string/comensal"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnRest"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#FF8800"
        android:text="@string/restaurante"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />


</LinearLayout>