<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bienvenido_nuevo_comensal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Inicio"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/para_brindarle_un_mejor_servicio_necesitamos_los_siguientes_datos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="15.5sp" />

    <EditText
        android:id="@+id/EditT_Nombre"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="casual"
        android:hint="@string/nombre_completo"
        android:inputType="text"
        android:paddingTop="10dp"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/EditT_Nombre_Usuario"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/usuario_campo"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/EditT_Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/contrase_a_Campo"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="Elije tu perfil de comensal"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#666"
        android:fontFamily="casual"
        android:text="@string/crear_cuenta"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold" />


</LinearLayout>