<?xml version="1.0" encoding="utf-8"?>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="perfilRestaurante"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:background="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/TVNombreRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/nombre_restaurante"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/direccion"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <Button
        android:id="@+id/btnActu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="casual"
        android:text="Actualizar información"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:fontFamily="casual"
        android:text="Eliminar cuenta"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold" />

    <!--<Button
        android:id="@+id/btnNvoPlat"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:src="@android:drawable/ic_menu_add" />-->

    <Button
        android:id="@+id/btnQR"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@android:color/holo_red_light"
        android:fontFamily="casual"
        android:text="Leer código QR"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="Ver estadisticas"
        android:textColor="@android:color/background_light"
        android:textSize="17sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="99dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"

        android:src="@android:drawable/ic_menu_add"
        app:backgroundTint="@android:color/holo_orange_dark" />


</LinearLayout>

